--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body {
     background-repeat:no-repeat;
     background-position: center;
     box-sizing: border-box;
+    min-height: 100vh;
     margin: 0;
     padding: 0;
 }
@@ -99,6 +100,9 @@ h1 {
 }
 
 @media (max-width:767px) {
+    body {
+        background-size: 100% 100%;
+    }
     .container {
         width: 220px;
         padding: 15px;
